pp2/samples/tested/bad7.decaf.test

*** Error line 11.
  Cow betsy;
      ^^^^^
*** syntax error

